# pptFileBack

./: DeviceNotify.h  README.md  Win32FSHook.h  readme.md  tools.h
font/: package-lock.json  package.json  vite.config.js
font/src/: App.vue
server/: app.py  dbsql.sql
src/: CMakeLists.txt  CMakeProject1.cpp  DeviceNotify.cpp  WatchData.cpp  WatchData.h  Win32FSHook.cpp  objToUpLoadOrSave.cpp  objToUpLoadOrSave.h  tools.cpp
